Fixed text overflow for academic project name

--- a/src/components/githubRepoCard/GithubRepoCard.css
+++ b/src/components/githubRepoCard/GithubRepoCard.css
@@ -56,7 +56,7 @@
   font-size: 25px;
   font-weight: 700;
   letter-spacing: -0.5px;
-  /* overflow: hidden; */
+  overflow: hidden;
   margin: 0px;
 }
 
